--- a/01-heaven.Rmd
+++ b/01-heaven.Rmd
@@ -2,9 +2,9 @@
 
 This template relies only on HTML and CSS. All the styling rules are included in the `pulp.css` file.  
 
-## Build the book on GitLab {-}
+## Build the book with GitLab {-}
 
-Since GitLab offers a git version control service and a CI/CD service in one application, the easiest way to build the book is to import this repository on GitLab.  
-Once imported, the book will be automatically built and you will find the pdf file in the artifacts folder or directly using the url: `username.gitlab.io/repo/pulpdown.pdf`.
+Since GitLab offers a git version control service and a CI/CD service in one application, the easiest way to build this book is to import this repository on GitLab^[see an example here: <https://gitlab.com/RLesur/pulpdown>.].  
+Once imported, the book will be automatically built after each commit and you will find the pdf file in the artifacts folder^[see <https://gitlab.com/RLesur/pulpdown/pipelines>.] or directly using the url: `https://username.gitlab.io/repo/pulpdown.pdf`.
 
-
+## Build the book with Travis
