--- a/packages.bib
+++ b/packages.bib
@@ -14,8 +14,9 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-weasydoc,
-  title = {weasydoc: Convert R Markdown to PDF Using Weasyprint},
+  title = {weasydoc: Convert R Markdown to PDF Using HTML and CSS},
   author = {Romain Lesur},
   note = {R package version 0.0.9000},
+  url = {https://github.com/RLesur/weasydoc},
   year = {2018},
 }
