--- a/book.bib
+++ b/book.bib
@@ -14,3 +14,13 @@
   year = {2018},
   howpublished = {\url{https://yihui.name/en/2018/07/in-html-i-trust/}}
 }
+@Book{bookdown,
+  title = {bookdown: Authoring Books and Technical Documents with {R}
+    Markdown},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2016},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
+}
